# Yiana

./: .gitignore  AGENTS.md  CLAUDE-CHANGELOG.md  CLAUDE.md  CODING_STYLE.md  HANDOFF.md  IMPLEMENTATION_PLAN_OCR_EXTRACTION_TRIGGERS.md  NEXT_SESSION.md  NEXT_STEPS.md  PLAN.md  QUERIES.md  README.md  check-pdf-in-local-store.py  check-temp-pdf.py  checkpdf.py  letter_addresses.db  swiftlint.yml  vibe-log-report-2025-11-01.html
.claude/: settings.json
.serena/: project.yml
AddressExtractor/: BACKEND_GUIDE.md  INTEGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  TODO.md  address_extractor.py  address_manager.py  addresses.db  backend_db.py  backend_schema.sql  batch_process.py  clinic_notes_parser.py  clinic_notes_parser_improved.py  com.vitygas.yiana-extraction.plist  com.vitygas.yiana-render.plist  extraction_service.py  gp_bulk_importer.py  gp_fuzzy_search.py  gp_local.db  gp_manual_data.py  gp_matcher.py  gp_practice_sync.py  gp_practice_sync_v2.py  letter_addresses.db  letter_cli.py  letter_generator.py  letter_generator_improved.py  letter_html_renderer.py  letter_models.py  letter_processor.py  letter_renderer.py  letter_system.db  letter_system_db.py  letter_system_db_simple.py  letter_template.tex  letter_template_improved.tex  letter_template_simple.tex  letter_template_yiale.tex  llm_extractor.py  markdown_renderer.py  (+21 more)
Yiale/: ExportOptions.plist
Yiana/: ExportOptions-macOS.plist  ExportOptions.plist  (+12 more)
YianaRenderer/rust/yiana-typst-bridge/: .gitignore  Cargo.toml  build-xcframework.sh  cbindgen.toml
YianaRenderer/rust/yiana-typst-bridge/src/: lib.rs
(+757 files in other folders)
