[package]
name = "yiana-typst-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
typst = "0.13"
typst-pdf = "0.13"
typst-kit = { version = "0.13", features = ["embed-fonts"] }
typst-syntax = "0.13"
typst-eval = "0.13"
typst-timing = "0.13"
comemo = "0.4"
ecow = "0.2"
chrono = "0.4"
serde_json = "1"
typst-utils = "0.13"

[profile.release]
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
